--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The Sorting Hat</title>
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|Mada:400,700" rel="stylesheet">
+
   </head>
   <body>
     <noscript>
