--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Sorting Hat</title>
-    <link href="https://fonts.googleapis.com/css?family=Gothic+A1:500|Playfair+Display:700i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400,400i" rel="stylesheet">
 
   </head>
   <body>
