In Montreal, 100% new styles, responsive, need to add authentication, test on devices

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Sorting Hat</title>
-    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400,400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mukta:400,600,800|Vollkorn:400i,600i" rel="stylesheet">
 
   </head>
   <body>
